--- a/templates/delete-dns-route53.erb
+++ b/templates/delete-dns-route53.erb
@@ -18,7 +18,7 @@ fi
 export AWS_ACCESS_KEY_ID
 export AWS_SECRET_ACCESS_KEY
 
-HOSTNAME=$(/opt/aws/bin/ec2-describe-tags -O $AWS_ACCESS_KEY_ID -W $AWS_SECRET_ACCESS_KEY --region "<%= scope.lookupvar('$dynamicroute53::region') %> \
+HOSTNAME=$(/opt/aws/bin/ec2-describe-tags -O $AWS_ACCESS_KEY_ID -W $AWS_SECRET_ACCESS_KEY --region "<%= scope.lookupvar('dynamicroute53::region') %> \
   --filter "resource-type=instance" \
   --filter "resource-id=$(/opt/aws/ec2-metadata -i | cut -d ' ' -f2)" \
   --filter "key=Name" | cut -f5)
