--- a/templates/update-dns-route53.erb
+++ b/templates/update-dns-route53.erb
@@ -20,9 +20,9 @@ export AWS_ACCESS_KEY_ID
 export AWS_SECRET_ACCESS_KEY
 
 # Replace this with your domain
-DOMAIN="<%= scope.lookupvar('$dynamicroute53::domain') %>"
+DOMAIN="<%= scope.lookupvar('dynamicroute53::domain') %>"
 
-HOSTNAME=$(/opt/aws/bin/ec2-describe-tags -O $AWS_ACCESS_KEY_ID -W $AWS_SECRET_ACCESS_KEY --region "<%= scope.lookupvar('$dynamicroute53::region') %>" \
+HOSTNAME=$(/opt/aws/bin/ec2-describe-tags -O $AWS_ACCESS_KEY_ID -W $AWS_SECRET_ACCESS_KEY --region "<%= scope.lookupvar('dynamicroute53::region') %>" \
   --filter "resource-type=instance" \
   --filter "resource-id=$(/opt/aws/ec2-metadata -i | cut -d ' ' -f2)" \
   --filter "key=Name" | cut -f5)
