--- a/templates/delete-dns-route53.erb
+++ b/templates/delete-dns-route53.erb
@@ -5,23 +5,38 @@
 
 # Make sure only root can run our script
 if [ "$(id -u)" != "0" ]; then
-echo "This script must be run as root" 1>&2
-exit 1
+  echo "This script must be run as root" 1>&2
+  exit 1
 fi
 
-# Load configuration
-. /etc/route53/config
-. /etc/profile.d/java.sh
-. /etc/profile.d/aws.sh
+# Get our Instance ID, local IP, and EC2 Public Hostname using cloud-utils ec2metadata
+INSTANCE_ID=$(/usr/bin/ec2metadata --instance-id)
+IPV4_ADDRESS=$(/usr/bin/ec2metadata --local-ipv4)
+PUBLIC_HOSTNAME=$(/usr/bin/ec2metadata --public-hostname)
 
-# Export access key ID and secret for our tools
-export AWS_ACCESS_KEY_ID
-export AWS_SECRET_ACCESS_KEY
+# Set required variables for Route53 API Call
+HOSTED_ZONE_ID=<%= scope.lookupvar('dynamicroute53::hosted_zone_id') %>
+DOMAIN=<%= scope.lookupvar('dynamicroute53::domain') %>
+TTL=<%= scope.lookupvar('dynamicroute53::ttl') %>
 
-HOSTNAME=$(/opt/aws/bin/ec2-describe-tags -O $AWS_ACCESS_KEY_ID -W $AWS_SECRET_ACCESS_KEY --region "<%= scope.lookupvar('dynamicroute53::region') %>" \
-  --filter "resource-type=instance" \
-  --filter "resource-id=$(/opt/aws/ec2-metadata -i | cut -d ' ' -f2)" \
-  --filter "key=Name" | cut -f5)
+# Get our desired hostname from the "Name" tag on our instance
+HOSTNAME=$(/usr/local/bin/aws ec2 describe-tags \
+  --filters "Name=resource-type,Values=instance" \
+            "Name=resource-id,Values=${INSTANCE_ID}" \
+            "Name=key,Values=Name" \
+            | awk '{print $5}')
 
-# Delete the hostname from DNS on shutdown
-/usr/local/bin/cli53 rrdelete "$ZONE" "$HOSTNAME"
+# Begin changes
+##############################################################
+
+<% if scope.lookupvar('dynamicroute53::private_dns') %>
+# Set an A record with the local IP
+
+/usr/local/bin/aws route53 change-resource-record-sets --hosted-zone-id ${HOSTED_ZONE_ID} \
+  --change-batch "{\"Comment\": \"string\",\"Changes\": [{\"Action\": \"DELETE\",\"ResourceRecordSet\": {\"Name\": \"${HOSTNAME}.${DOMAIN}\",\"Type\": \"A\",\"TTL\": ${TTL},\"ResourceRecords\": [{\"Value\": \"${IPV4_ADDRESS}\"}]}}]}"
+<% else %>
+# Set a CNAME record with the public hostname
+
+/usr/local/bin/aws route53 change-resource-record-sets --hosted-zone-id ${HOSTED_ZONE_ID} \
+  --change-batch "{\"Comment\": \"string\",\"Changes\": [{\"Action\": \"DELETE\",\"ResourceRecordSet\": {\"Name\": \"${HOSTNAME}.${DOMAIN}\",\"Type\": \"CNAME\",\"TTL\": ${TTL},\"ResourceRecords\": [{\"Value\": \"${PUBLIC_HOSTNAME}\"}]}}]}"
+<% end %>
