--- a/templates/update-dns-route53.erb
+++ b/templates/update-dns-route53.erb
@@ -39,6 +39,22 @@ HOSTNAME=$(/usr/local/bin/aws ec2 describe-tags \
 # Begin changes
 ##############################################################
 
+
+# Check if there is already a record for our entry and it doesn't match ours - delete it!
+# This is here because otherwise we can't put in our record.
+# TODO: This only checks for existing private DNS entries - not public.
+# TODO: I believe list-resource-record-sets would need to be paginated if there were enough entries, which this does't support (yet).
+<% if scope.lookupvar('dynamicroute53::private_dns') %>
+ROUTE53_IP=$(/usr/local/bin/aws route53 list-resource-record-sets --hosted-zone-id ${HOSTED_ZONE_ID} | grep -A1 ${HOSTNAME}.${DOMAIN} | awk '{print $2}' | tail -n1)
+
+if [ "${ROUTE53_IP}" != "${IPV4_ADDRESS}" ] && [ -n "${ROUTE53_IP}" ];
+then
+  /usr/local/bin/aws route53 change-resource-record-sets --region ap-northeast-1 --hosted-zone-id ${HOSTED_ZONE_ID} \
+  --change-batch "{\"Comment\": \"string\",\"Changes\": [{\"Action\": \"DELETE\",\"ResourceRecordSet\": {\"Name\": \"${HOSTNAME}.${DOMAIN}\",\"Type\": \"A\",\"TTL\": ${TTL},\"ResourceRecords\": [{\"Value\": \"${ROUTE53_IP}\"}]}}]}"
+fi
+<% end %>
+
+
 # Set the hostname of the machine to our EC2 Name tag & Domain.
 /bin/hostname $HOSTNAME.$DOMAIN
 echo $HOSTNAME.$DOMAIN > /etc/hostname
